<resources>
    <string name="app_name">ExamprojectBeSammen</string>
    <string name="BeSammen_logo_white_background">BeSammen Logo White Background</string>
    <string name="BeSammen_text_with_small_logo">BeSammen text with small logo</string>
    <string name="log_in">Log In</string>
    <string name="insert_email">Indtast Email</string>
    <string name="insert_password">Indtast kodeord</string>
    <string name="menu">Menu</string>
    <string name="din_profil">Din Profil</string>
    <string name="dine_samtaler">Dine Samtaler</string>
    <string name="tips_og_r_d">Tips og råd</string>
    <string name="tips_r_d" />
    <string name="samtalestarter" />
    <string name="eksempel_p_nogle_samtalestartere" />
    <string name="hej_mit_navn_er_x_jeg_er_x_r_gammel_og_blev_diagnostiseret_med_angst_i_x_jeg_h_ber_at_denne_gruppe_kan_hj_lpe_mig_med_x" />
    <string name="i_hverdagen_oplever_jeg_x_er_der_andre_som_har_samme_oplevelser" />
    <string name="send">Send</string>
    <string name="skriv_din_besked_her">Skriv din besked her..</string>
    <string name="get_current_username">username</string>
    <string name="diagnose">Diagnose</string>
    <string name="age">age</string>
    <string name="gendan_kodeord">gendan kodeord</string>
    <string name="log_ud">log ud</string>
</resources>